--- a/examples/sem_colab.ipynb
+++ b/examples/sem_colab.ipynb
@@ -11,12 +11,16 @@
     },
     "kernelspec": {
       "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3.8.10 64-bit (windows store)"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.8.10"
     },
-    "accelerator": "GPU"
+    "accelerator": "GPU",
+    "interpreter": {
+      "hash": "061711a3f50e6b4e17d24312710e1098bbbc2b19107397abee525ef5e9bc15e2"
+    }
   },
   "cells": [
     {
@@ -35,7 +39,7 @@
         "id": "SxXPhIP7amY_"
       },
       "source": [
-        "!git clone https://github.com/AjayNandoriya/ImageDecomposition.git"
+        "!git clone https://github.com/AjayNandoriya/ImageDecomposition.git\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -46,9 +50,13 @@
         "id": "LOZ-i97qbhxd"
       },
       "source": [
+        "import os\n",
+        "import sys\n",
+        "REPO_PATH = r'C:\\Users\\Dext-PC\\source\\repos'\n",
+        "sys.path.append(REPO_PATH)\n",
         "from ImageDecomposition.scripts import sem"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
