--- a/examples/sem_colab.ipynb
+++ b/examples/sem_colab.ipynb
@@ -39,7 +39,8 @@
         "id": "SxXPhIP7amY_"
       },
       "source": [
-        "!git clone https://github.com/AjayNandoriya/ImageDecomposition.git\n"
+        "# !git clone https://github.com/AjayNandoriya/ImageDecomposition.git\n",
+        "!git checkout -f\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -103,18 +104,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CctkGMcnb8kU"
-      },
-      "source": [
-        "\n",
-        "sem.train()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 554
@@ -162,6 +151,18 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CctkGMcnb8kU"
+      },
+      "source": [
+        "\n",
+        "sem.train()"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
